[package]
name = "inner_demons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Remove dynamic linking before release
[dependencies]
bevy = { version = "0.10.1" }
rand = { version = "0.8.5" }
image = { version = "0.24.6" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3